center align and verify route fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.Center {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
